# device-generator-rust

./: README.md
device-simulator/: Cargo.toml
device-simulator/src/: device.rs  main.rs
server/: Cargo.toml
server/src/: main.rs  routes.rs
