[package]
name = "device-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
reqwest = "0.11"  # For server-side HTTP requests
rocket = { version = "0.5.0-rc.2", features = ["json"] }  # For server's API
